Fixed small format spacing

--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,7 @@ h1 {
 }
 
 .body {
-/*  border: 1px solid black;
-*//*  background-color: #A52A2A;
-*/  width: 90%;
+  width: 90%;
   height: 150px;
   margin-right: auto;
   margin-left: auto;
@@ -42,7 +40,7 @@ h1 {
   height: 30px;
   width: 80px;
   border: 1px solid black;
-    font-family: Helvetica;
+  font-family: Helvetica;
 }
 
 .titleC1 {
@@ -66,7 +64,6 @@ h1 {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-/*    border: 1px solid black;*/
   }
   .col-lg-1 {
     width: 8.33%;
@@ -110,8 +107,7 @@ h1 {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-/*    border: 1px solid black;
-*/  }
+  }
   .col-md-1 {
     width: 8.33%;
   }
@@ -148,4 +144,12 @@ h1 {
   .col-md-12 {
     width: 100%;
   }
+}
+
+/*** Small devices ***/
+@media (max-width: 767px) {
+  .col-sm {
+      margin-bottom: 10px;
+  }
+
 }
